adding performance settings to status on backend
