# lib/webserver/controllers/proofController.ts
@@ -1,12 +1,9 @@
-import { Controller, Get, Path, Route, Tags, Request } from "tsoa";
+import { Controller, Get, Path, Route, Tags } from "tsoa";
 import { Factory, Inject, Singleton } from "typescript-ioc";
-import { DBVotingRoundResult } from "../../entity/attester/dbVotingRoundResult";
-import { ServiceStatus } from "../dto/ServiceStatus";
 import { SystemStatus } from "../dto/SystemStatus";
 import { VotingRoundResult } from "../dto/VotingRoundResult";
 import { ProofEngine } from "../engines/proofEngine";
 import { ApiResponse, handleApiResponse } from "../models/ApiResponse";
-import * as express from "express";
 
 @Tags('Proof')
 @Route("api/proof")
